<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <CheckBox
        android:id="@+id/cb_save"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginRight="10dp"
        android:layout_marginTop="30dp"
        android:text="@string/text_sava_data"
        android:textAppearance="@android:style/TextAppearance.Material.Small" />

    <ImageView
        android:id="@+id/iv_collect"
        android:layout_width="200dp"
        android:layout_height="120dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:adjustViewBounds="true"
        android:scaleType="fitXY" />

    <ImageView
        android:id="@+id/iv_collect_bin"
        android:layout_width="200dp"
        android:layout_height="120dp"
        android:layout_below="@id/iv_collect"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:adjustViewBounds="true"
        android:scaleType="fitXY" />

    <TextView
        android:id="@+id/startTimeTV"
        android:layout_below="@+id/iv_collect_bin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/endTimeTV"
        android:layout_below="@+id/startTimeTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/bt_sstop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="5dp"
        android:gravity="center"
        android:text="@string/collect_stop" />

    <Button
        android:id="@+id/bt_start"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/bt_sstop"
        android:layout_marginBottom="15dp"
        android:gravity="center"
        android:text="@string/collect_start" />



</RelativeLayout>
